fix: исправить метод deleteSubtaskById